Expose type declaration files

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   "type": "module",
   "main": "index.js",
   "files": [
-    "index.js"
+    "index.js",
+    "index.d.ts"
   ],
+  "types": "index.d.ts",
   "dependencies": {
     "@types/estree-jsx": "^0.0.1",
     "estree-util-visit": "^1.0.0",
