--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "acorn": "^8.0.0",
     "c8": "^7.0.0",
     "prettier": "^2.0.0",
-    "remark-cli": "^9.0.0",
-    "remark-preset-wooorm": "^8.0.0",
+    "remark-cli": "^10.0.0",
+    "remark-preset-wooorm": "^9.0.0",
     "rimraf": "^3.0.0",
     "tape": "^5.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^4.0.0",
-    "xo": "^0.42.0"
+    "xo": "^0.47.0"
   },
   "scripts": {
     "prepack": "npm run build && npm run format",
@@ -70,7 +70,10 @@
     "trailingComma": "none"
   },
   "xo": {
-    "prettier": true
+    "prettier": true,
+    "rules": {
+      "unicorn/prefer-code-point": "off"
+    }
   },
   "remarkConfig": {
     "plugins": [
