--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "types": "index.d.ts",
   "dependencies": {
     "@types/estree-jsx": "^1.0.0",
+    "devlop": "^1.0.0",
     "estree-util-visit": "^2.0.0",
     "unist-util-position-from-estree": "^2.0.0"
   },
